@@ -4,9 +4,11 @@
 	<name xml:lang="nb">Tynne rullefelt</name>
 	<author href="http://stylecode.altervista.org">Damage92</author>
 	<icon src="icon.png"/>
-	<description xml:lang="en">A scrollbar with auto-hide</description>
-	<description xml:lang="it">Una barra di scorrimento che si nasconde automaticamente</description>
-	<description xml:lang="nb">Rullefelt som skjules automatisk</description>
+	<description xml:lang="en">A scrollbar with auto-hide.</description>
+	<description xml:lang="it">Una barra di scorrimento che si nasconde automaticamente.</description>
+	<description xml:lang="nb">Rullefelt som skjules automatisk.</description>
+	<description xml:lang="pl">Samoukrywający się pasek przewijania.</description>	
+	
 	<preference name="alternative" value="false" />
 	<preference name="auto_hide" value="true" />
 	<preference name="size" value="5" />
