@@ -1,0 +1,19 @@
+var strings = {
+	"Bars color" : "Kolor",
+	"color of the bars" : "",
+	"Border color" : "Kolor brzegów",
+	"bar's border color" : "",
+	"Size" : "Rozmiar",
+	"the size of the bars" : "szerokość paska",
+	"Solve slow scrolling" : "Napraw wolne przewijanie",
+	"use this option if you are experiencing slow scrolling" : "zaznacz, jeśli przewijanie jest zbyt powolne",
+	"Auto hide" : "Samoczynne ukrywanie",
+	"auto hide the scrollbars after a few seconds" : "ukrycie paska po kilku sekundach",
+	"View bar only when mouse is over it" : "Pasek widoczny tylko pod kursorem",
+	"version" : "wersja",
+	"default value": "domyślne",
+	"General options:" : "Główne opcje:",
+	"Bar apparence:" : "Wygląd paska:",
+        "To turn off the default scroll bar go in Opera → Preferences → Advanced → Browsing, deactivate “Show scrollbars”." : "Aby ukryć domyślny pasek przewijania wybierz Opera → Preferencje → Zaawansowane → Przeglądanie i odznacz pole „Pokaż paski przewijania”.",
+        "To turn off the default scroll bar go in Settings → Preferences → Advanced → Browsing, deactivate “Show scrollbars”." : "Aby ukryć domyślny pasek przewijania wybierz Ustawienia → Preferencje → Zaawansowane → Przeglądanie i odznacz pole „Pokaż paski przewijania”."
+};
