@@ -41,3 +41,6 @@ Update 0.8-4
  - better options page
  - better icon
  - new translation system
+
+NEXT VERSION:
+excluded docs.google.it
